<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_learningnumbers"
    android:gravity="center|bottom"
    android:orientation="vertical" >
  <com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="@string/admob_id_banner"
                         ads:adSize="BANNER"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton1Click"
                android:scaleType="fitCenter"
                android:src="@drawable/twintyy" />

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton2Click"
                android:scaleType="fitCenter"
                android:src="@drawable/threety" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton3Click"
                android:scaleType="fitCenter"
                android:src="@drawable/forty" />

            <ImageButton
                android:id="@+id/button4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton4Click"
                android:scaleType="fitCenter"
                android:src="@drawable/fivety" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <ImageButton
               android:id="@+id/button5"
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:layout_margin="5dp"
               android:background="@drawable/myboton"
               android:contentDescription="@string/ContentImagen"
               android:onClick="onButton5Click"
               android:scaleType="fitCenter"
               android:src="@drawable/sixty" />

            <ImageButton
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton6Click"
                android:scaleType="fitCenter"
                android:src="@drawable/seventy" />

            <ImageButton
                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton7Click"
                android:scaleType="fitCenter"
                android:src="@drawable/eighty" />

            <ImageButton
                android:id="@+id/button8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton8Click"
                android:scaleType="fitCenter"
                android:src="@drawable/ninety" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/button9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:background="@drawable/myboton"
                android:contentDescription="@string/ContentImagen"
                android:onClick="onButton9Click"
                android:scaleType="fitCenter"
                android:src="@drawable/onehandred" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
       <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/fondo9"
        android:onClick="onMainClick"
        android:scaleType="fitCenter"
        android:text="@string/toMainMenu" />

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/next"
            android:onClick="onNextClick"
            android:scaleType="fitCenter"
            android:text="@string/next_numbers" />

     </TableRow>
    </TableLayout>

</LinearLayout>