<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_learningnumbers"
    android:gravity="center|bottom"
    android:orientation="vertical" >
      <com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="@string/admob_id_banner"
                         ads:adSize="BANNER"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:onClick="onButton1Click"
                android:scaleType="fitCenter"
                android:src="@drawable/sardilla" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/svaca"
                android:onClick="onButton2Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/scaballo"
                android:onClick="onButton3Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/scabra"
                android:onClick="onButton4Click" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <ImageButton
               android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/scerdo"
                android:onClick="onButton5Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sdelfin"
                android:onClick="onButton6Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/selefante"
                android:onClick="onButton7Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sfoca"
                android:onClick="onButton8Click" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sgallo"
                android:onClick="onButton9Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button10"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sgato"
                android:onClick="onButton10Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button11"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sleon"
                android:onClick="onButton11Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button12"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/smono"
                android:onClick="onButton12Click" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button13"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/soso"
                android:onClick="onButton13Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button14"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/soveja"
                android:onClick="onButton14Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button15"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/spaloma"
                android:onClick="onButton15Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button16"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/spato"
                android:onClick="onButton16Click" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button17"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sperro"
                android:onClick="onButton17Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button18"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/srana"
                android:onClick="onButton18Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button19"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sserpiente"
                android:onClick="onButton19Click" />

            <ImageButton
                android:contentDescription="@string/ContentImagen"
                android:background="@drawable/myboton"
                android:scaleType="fitCenter"
                android:id="@+id/button20"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/sburro"
                android:onClick="onButton20Click" />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
       <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/fondo9"
        android:onClick="onMainClick"
        android:scaleType="fitCenter"
        android:text="@string/toMainMenu" />

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/next"
            android:onClick="onNextClick"
            android:scaleType="fitCenter"
            android:text="@string/next_numbers" />

     </TableRow>
    </TableLayout>

</LinearLayout>